--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
             <a href="#service" class="nav-item nav-link">Service</a>
             <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
             <a href="#testimonial" class="nav-item nav-link">Review</a>
+            <!--
+                            <a href="#contact" class="nav-item nav-link">Contact</a>
+            -->
         </div>
-        <a href="" class="btn btn-menu d-none d-lg-block" style="background-color:#457efa; color: #ffffff;">Hire Me</a>
+        <a href="mailto:casseselorenzo03@gmail.com" class="btn btn-menu d-none d-lg-block" style="background-color:#457efa; color: #ffffff;">Hire Me</a>
     </div>
 </nav>
 <!-- Navbar End -->
@@ -57,14 +60,16 @@
 <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;">
     <div class="container">
         <div class="row align-items-center">
+
             <div class="col-lg-7 text-center text-lg-left">
-                <h3 class="text-white font-weight-normal mb-3">Ciao, mi chiamo</h3>
+                <h3 class="text-white font-weight-normal mb-3">Hello, my name</h3>
                 <h1 class="display-4 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">Lorenzo
                     Cassese</h1>
                 <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                <div class="typed-text d-none">Sviluppatore Full Stack, Web Developer, IT Project Manager, Software Developer</div>
+                <div class="typed-text d-none">Software Developer, Full Stack Developer, ERP Developer, Flutter Developer, Web Developer</div>
                 <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                    <a href="" class="btn btn-white mr-4">Download CV</a>
+                    <a href="CV_it_Lorenzo.pdf" class="btn btn-white mr-4" download>Download CV</a>
+
                     <a href="" class="btn btn-blue d-none d-sm-block">Play Video</a>
                 </div>
             </div>
@@ -89,18 +94,21 @@
                 <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
             </div>
             <div class="col-lg-7">
-                <h3 class="mb-4">Full Stack Developer & IT Project Manager</h3>
-                <p>Sviluppatore appassionato con oltre 3 anni di esperienza nella realizzazione di soluzioni web e applicazioni. Specializzato in tecnologie Full Stack con particolare focus su PHP, JavaScript e framework moderni.</p>
+                <h3 class="mb-4">Software Developer</h3>
+                <p>Ciao, sono un giovane e motivato sviluppatore software con un’importante esperienza nel settore degli ERP. Ho una buona comprensione delle varie fasi della supply‑chain aziendale orientata alla gestione tramite software. Mi considero una persona disponibile e mossa da costante curiosità personale sull’informatica che mi ha portato a sviluppare anche diverse app e progetti personali.</p>
                 <div class="row mb-3">
-                    <div class="col-sm-6 py-2"><h6>Nome: <span class="text-secondary">Lorenzo Cassese</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Data di Nascita: <span class="text-secondary">21 Gennaio 2003</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Laurea: <span class="text-secondary">Ingegneria Informatica</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Esperienza: <span class="text-secondary">3+ Anni</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">lorenzocassese95@gmail.com</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Indirizzo: <span class="text-secondary">Napoli, Italia</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Disponibile</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Lorenzo Cassese</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">-</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Laurea Triennale (in corso)</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">Full Stack Developer</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+39 334 821 0946</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">casseselorenzo03@gmail.com</span></h6>
+                    </div>
+                    <div class="col-sm-6 py-2"><h6>Address: <span
+                            class="text-secondary">Nola (NA), Italy</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                 </div>
-                <a href="" class="btn blue btn-outline-primary mr-4">Hire Me</a>
+                <a href="mailto:casseselorenzo03@gmail.com" class="btn blue btn-outline-primary mr-4">Hire Me</a>
                 <a href="" class="btn btn-outline-primary">Learn More</a>
             </div>
         </div>
@@ -124,10 +132,32 @@
                         <h6 class="font-weight-bold">90%</h6>
                     </div>
                     <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                             aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="skill mb-4">
+                    <div class="d-flex justify-content-between">
+                        <h6 class="font-weight-bold">SQL</h6>
+                        <h6 class="font-weight-bold">90%</h6>
+                    </div>
+                    <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                              aria-valuemax="100"></div>
                     </div>
                 </div>
+                <div class="skill mb-4">
+                    <div class="d-flex justify-content-between">
+                        <h6 class="font-weight-bold">Flutter</h6>
+                        <h6 class="font-weight-bold">80%</h6>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                             aria-valuemax="100"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
                 <div class="skill mb-4">
                     <div class="d-flex justify-content-between">
                         <h6 class="font-weight-bold">JavaScript</h6>
@@ -140,43 +170,21 @@
                 </div>
                 <div class="skill mb-4">
                     <div class="d-flex justify-content-between">
-                        <h6 class="font-weight-bold">HTML</h6>
-                        <h6 class="font-weight-bold">95%</h6>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="95" aria-valuemin="0"
-                             aria-valuemax="100"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="skill mb-4">
-                    <div class="d-flex justify-content-between">
-                        <h6 class="font-weight-bold">CSS</h6>
+                        <h6 class="font-weight-bold">Laravel</h6>
                         <h6 class="font-weight-bold">85%</h6>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                        <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="85" aria-valuemin="0"
                              aria-valuemax="100"></div>
                     </div>
                 </div>
                 <div class="skill mb-4">
                     <div class="d-flex justify-content-between">
-                        <h6 class="font-weight-bold">Angular JS</h6>
-                        <h6 class="font-weight-bold">95%</h6>
+                        <h6 class="font-weight-bold">TypeScript</h6>
+                        <h6 class="font-weight-bold">80%</h6>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="95" aria-valuemin="0"
-                             aria-valuemax="100"></div>
-                    </div>
-                </div>
-                <div class="skill mb-4">
-                    <div class="d-flex justify-content-between">
-                        <h6 class="font-weight-bold">Wordpress</h6>
-                        <h6 class="font-weight-bold">85%</h6>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                              aria-valuemax="100"></div>
                     </div>
                 </div>
@@ -196,26 +204,51 @@
         </div>
         <div class="row align-items-center">
             <div class="col-lg-6">
-                <h3 class="mb-4">Formazione</h3>
+                <h3 class="mb-4">My Education</h3>
                 <div class="border-left border-primary pt-2 pl-4 ml-2">
                     <div class="position-relative ex-me mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute"
                            style="top: 2px; left: -35px; font-size: 22px;"></i>
-                        <h5 class="font-weight-bold mb-1">Laurea in Ingegneria Informatica</h5>
-                        <p class="mb-2"><strong>Università degli Studi di Napoli Federico II</strong> | <small>2014 - 2020</small></p>
-                        <p>Corso di laurea focalizzato su programmazione, architetture software e gestione di progetti IT</p>
+                        <h5 class="font-weight-bold mb-1">Laurea Triennale in Informatica</h5>
+                        <p class="mb-2"><strong>UniPe</strong> | <small>2024 - In corso</small></p>
+                        <p>Percorso di studi in Informatica.</p>
+                    </div>
+                    <div class="position-relative ex-me mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute"
+                           style="top: 2px; left: -35px;  font-size: 22px;"></i>
+                        <h5 class="font-weight-bold mb-1">Diploma Informatico</h5>
+                        <p class="mb-2"><strong>I.T.C.G. Masullo Theti</strong> | <small>2016 - 2021</small></p>
+                        <p>Voto: 95/100.</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
-                <h3 class="mb-4">Esperienza Lavorativa</h3>
+                <h3 class="mb-4">My Expericence</h3>
                 <div class="border-left border-primary pt-2 pl-4 ml-2">
                     <div class="position-relative ex-me mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute"
                            style="top: 2px;left: -35px;  font-size: 22px;"></i>
                         <h5 class="font-weight-bold mb-1">Full Stack Developer</h5>
-                        <p class="mb-2"><strong>Tecnocomputer SRL</strong> | <small>2020 - Presente</small></p>
-                        <p>Sviluppo di applicazioni web utilizzando PHP, JavaScript, e vari framework. Gestione di progetti e team di sviluppo.</p>
+                        <p class="mb-2"><strong>Softmanit S.R.L.</strong> | <small>2021 - Oggi</small></p>
+                        <p>Progettazione, sviluppo e distribuzione di applicativi ERP utilizzando PHP, Laravel e FOX PRO per la gestione della supply chain (workflow, logistica, produzione, vendite). Integrazione dati Industry 4.0, implementazione logiche esterne con file JSON, sviluppo mobile apps con Flutter, gestione database SQL Server e MariaDB, moduli di Distinta Base (BOM), ottimizzazione codice, formazione tecnica e supporto a team e clienti nazionali e internazionali.</p>
+                    </div>
+                    <div class="position-relative ex-me mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute"
+                           style="top: 2px;left: -35px;  font-size: 22px;"></i>
+                        <h5 class="font-weight-bold mb-1">Artificial Intelligence</h5>
+                        <p class="mb-2"><strong>Soft Company</strong> | <small> Good</small></p>
+                        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum
+                            est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet
+                            lorem diam</p>
+                    </div>
+                    <div class="position-relative ex-me mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute"
+                           style="top: 2px;left: -35px;  font-size: 22px;"></i>
+                        <h5 class="font-weight-bold mb-1">Web Development</h5>
+                        <p class="mb-2"><strong>Soft Company</strong> | <small> Excellent</small></p>
+                        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum
+                            est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet
+                            lorem diam</p>
                     </div>
                 </div>
             </div>
@@ -423,6 +456,54 @@
 <!-- Testimonial End -->
 
 
+<!-- Contact Start -->
+<!--<div class="container-fluid py-5" id="contact">
+    <div class="container">
+        <div class="position-relative d-flex align-items-center justify-content-center">
+            <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
+            <h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="contact-form text-center">
+                    <div id="success"></div>
+                    <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                        <div class="form-row">
+                            <div class="control-group col-sm-6">
+                                <input type="text" class="form-control p-4" id="name" placeholder="Your Name"
+                                    required="required" data-validation-required-message="Please enter your name" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="control-group col-sm-6">
+                                <input type="email" class="form-control p-4" id="email" placeholder="Your Email"
+                                    required="required" data-validation-required-message="Please enter your email" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <input type="text" class="form-control p-4" id="subject" placeholder="Subject"
+                                required="required" data-validation-required-message="Please enter a subject" />
+                            <p class="help-block text-danger"></p>
+                        </div>
+                        <div class="control-group">
+                            <textarea class="form-control py-3 px-4" rows="5" id="message" placeholder="Message"
+                                required="required"
+                                data-validation-required-message="Please enter your message"></textarea>
+                            <p class="help-block text-danger"></p>
+                        </div>
+                        <div>
+                            <button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Send
+                                Message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>-->
+<!-- Contact End -->
+
+
 <!-- Footer Start -->
 <div class="container-fluid bg-primary text-white mt-5 py-1 px-sm-1 px-md-5">
     <div class="container text-center py-5">
@@ -455,6 +536,7 @@
 <a href="#" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
+<!-- JavaScript Libraries -->
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
