--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta charset="utf-8">
     <title>Lorenzo Cassese - Freelancer Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Lorenzo Cassese, Software Developer, Full Stack, PHP, Laravel, SQL, Flutter, TypeScript, JavaScript, Web Developer, ERP Developer, Italy" name="keywords">
+    <meta content="Portfolio di Lorenzo Cassese – Full Stack & ERP Developer. Progetto, sviluppo e distribuzione di soluzioni web e mobile con PHP/Laravel, SQL, Flutter e TypeScript. Integrazione Industry 4.0 e ottimizzazione dei processi aziendali." name="description">
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Lorenzo Cassese – Software Developer">
+    <meta property="og:description" content="Full Stack & ERP Developer. Soluzioni web/mobile con PHP/Laravel, SQL, Flutter e TypeScript.">
+    <meta property="og:image" content="img/profile.png">
+    <meta property="og:url" content="">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Lorenzo Cassese – Software Developer">
+    <meta name="twitter:description" content="Full Stack & ERP Developer. Soluzioni web/mobile con PHP/Laravel, SQL, Flutter e TypeScript.">
+    <meta name="twitter:image" content="img/profile.png">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -26,6 +37,24 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Lorenzo Cassese",
+      "jobTitle": "Software Developer",
+      "email": "mailto:casseselorenzo03@gmail.com",
+      "url": "",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Nola",
+        "addressRegion": "NA",
+        "addressCountry": "IT"
+      },
+      "skills": ["PHP", "Laravel", "SQL", "JavaScript", "TypeScript", "Flutter", "ERP"]
+    }
+    </script>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
@@ -46,9 +75,7 @@
             <a href="#service" class="nav-item nav-link">Service</a>
             <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
             <a href="#testimonial" class="nav-item nav-link">Review</a>
-            <!--
-                            <a href="#contact" class="nav-item nav-link">Contact</a>
-            -->
+            <a href="#contact" class="nav-item nav-link">Contact</a>
         </div>
         <a href="mailto:casseselorenzo03@gmail.com" class="btn btn-menu d-none d-lg-block" style="background-color:#457efa; color: #ffffff;">Hire Me</a>
     </div>
@@ -74,7 +101,7 @@
                 </div>
             </div>
             <div class="col-lg-6 px-8 pl-lg-0 pb-5 pb-lg-4 about-img">
-                <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.png" alt="">
+                <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.png" alt="Portrait of Lorenzo Cassese">
             </div>
         </div>
     </div>
@@ -91,7 +118,7 @@
         </div>
         <div class="row align-items-center">
             <div class="col-lg-5 pb-4 pb-lg-0">
-                <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
+                <img class="img-fluid rounded w-100" src="img/about.jpg" alt="Lorenzo Cassese working at a desk">
             </div>
             <div class="col-lg-7">
                 <h3 class="mb-4">Software Developer</h3>
@@ -196,6 +223,27 @@
 
 
 <!-- Qualification Start -->
+<!-- Tech Stack Badges Start -->
+<div class="container pb-0">
+    <div class="row justify-content-center text-center">
+        <div class="col-lg-10">
+            <div class="d-flex flex-wrap justify-content-center">
+                <span class="badge badge-pill badge-primary m-1 py-2 px-3">PHP</span>
+                <span class="badge badge-pill badge-dark m-1 py-2 px-3">Laravel</span>
+                <span class="badge badge-pill badge-warning m-1 py-2 px-3">JavaScript</span>
+                <span class="badge badge-pill badge-info m-1 py-2 px-3">TypeScript</span>
+                <span class="badge badge-pill badge-secondary m-1 py-2 px-3">SQL Server</span>
+                <span class="badge badge-pill badge-secondary m-1 py-2 px-3">MariaDB</span>
+                <span class="badge badge-pill badge-success m-1 py-2 px-3">Flutter</span>
+                <span class="badge badge-pill badge-light m-1 py-2 px-3">Git</span>
+            </div>
+        </div>
+    </div>
+    <hr class="my-4">
+    </div>
+<!-- Tech Stack Badges End -->
+
+<!-- Qualification Start -->
 <div class="container-fluid py-5" id="qualification">
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center">
@@ -232,30 +280,33 @@
                         <p class="mb-2"><strong>Softmanit S.R.L.</strong> | <small>2021 - Oggi</small></p>
                         <p>Progettazione, sviluppo e distribuzione di applicativi ERP utilizzando PHP, Laravel e FOX PRO per la gestione della supply chain (workflow, logistica, produzione, vendite). Integrazione dati Industry 4.0, implementazione logiche esterne con file JSON, sviluppo mobile apps con Flutter, gestione database SQL Server e MariaDB, moduli di Distinta Base (BOM), ottimizzazione codice, formazione tecnica e supporto a team e clienti nazionali e internazionali.</p>
                     </div>
-                    <div class="position-relative ex-me mb-4">
-                        <i class="far fa-dot-circle text-primary position-absolute"
-                           style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                        <h5 class="font-weight-bold mb-1">Artificial Intelligence</h5>
-                        <p class="mb-2"><strong>Soft Company</strong> | <small> Good</small></p>
-                        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum
-                            est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet
-                            lorem diam</p>
-                    </div>
-                    <div class="position-relative ex-me mb-4">
-                        <i class="far fa-dot-circle text-primary position-absolute"
-                           style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                        <h5 class="font-weight-bold mb-1">Web Development</h5>
-                        <p class="mb-2"><strong>Soft Company</strong> | <small> Excellent</small></p>
-                        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum
-                            est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet
-                            lorem diam</p>
-                    </div>
+                    
                 </div>
             </div>
         </div>
     </div>
 </div>
 <!-- Qualification End -->
+
+<!-- Certifications Start -->
+<div class="container-fluid py-5" id="certifications">
+    <div class="container">
+        <div class="position-relative d-flex align-items-center justify-content-center">
+            <h1 class="display-2 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Certs</h1>
+            <h1 class="position-absolute text-uppercase text-primary">Certifications</h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-unstyled mb-0">
+                    <li class="mb-2"><i class="fa fa-check text-primary mr-2"></i> PHP & Laravel – Advanced Web Development</li>
+                    <li class="mb-2"><i class="fa fa-check text-primary mr-2"></i> SQL Databases – Design, Tuning & Query Optimization</li>
+                    <li class="mb-2"><i class="fa fa-check text-primary mr-2"></i> Flutter Mobile Development – Cross‑platform Apps</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Certifications End -->
 
 
 <!-- Services Start -->
@@ -271,8 +322,7 @@
                     <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
                     <h4 class="font-weight-bold m-0">Web Design</h4>
                 </div>
-                <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet
-                    labore eirmod erat clita</p>
+                <p>Progettazione di interfacce responsive e accessibili, con attenzione a UX/UI moderne e performance elevate su ogni dispositivo.</p>
                 <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
             </div>
             <div class="service-box col-lg-3 col-md-6 text-center mb-5">
@@ -280,7 +330,7 @@
                     <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
                     <h4 class="font-weight-bold m-0">Development</h4>
                 </div>
-                <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem</p>
+                <p>Sviluppo full‑stack con PHP/Laravel, TypeScript/JavaScript e integrazione database SQL. Best practice, sicurezza e scalabilità.</p>
                 <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
             </div>
             <div class="service-box col-lg-4 col-md-6 text-center mb-5">
@@ -288,8 +338,7 @@
                     <i class="fab fa-2x fa-android service-icon bg-primary text-white mr-3"></i>
                     <h4 class="font-weight-bold m-0">Apps Design</h4>
                 </div>
-                <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet
-                    labore eirmod erat clita</p>
+                <p>Design di app Flutter con componenti riutilizzabili, navigazione fluida e standard Material/Cupertino.</p>
                 <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
             </div>
             <div class="service-box col-lg-4 col-md-6 text-center mb-5">
@@ -297,8 +346,7 @@
                     <i class="fab fa-2x fa-apple service-icon bg-primary text-white mr-3"></i>
                     <h4 class="font-weight-bold m-0">Apps Development</h4>
                 </div>
-                <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem Amet lorem
-                    lorem</p>
+                <p>Sviluppo di applicazioni mobile cross‑platform in Flutter: architetture pulite, gestione stato e integrazione API/DB.</p>
                 <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
             </div>
             <div class="service-box col-lg-3 col-md-6 text-center mb-5">
@@ -306,7 +354,7 @@
                     <i class="fa fa-2x fa-search service-icon bg-primary text-white mr-3"></i>
                     <h4 class="font-weight-bold m-0">SEO</h4>
                 </div>
-                <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem </p>
+                <p>Ottimizzazione tecnica (Core Web Vitals), struttura semantica e metadata per migliorare ranking e CTR.</p>
                 <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
             </div>
             <div class="service-box col-lg-4  col-md-7 text-center mb-5">
@@ -314,8 +362,7 @@
                     <i class="fa fa-2x fa-edit service-icon bg-primary text-white mr-3"></i>
                     <h4 class="font-weight-bold m-0">Content Creating</h4>
                 </div>
-                <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet
-                    labore eirmod erat clita</p>
+                <p>Redazione di contenuti tecnici e documentazione chiara per onboarding rapido e manutenzione efficace.</p>
                 <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
             </div>
         </div>
@@ -344,32 +391,35 @@
         <div class="row portfolio-container">
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                 <div class="position-relative overflow-hidden mb-2">
-                    <img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="">
+                    <img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="Dashboard ERP in Laravel">
                     <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                         <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
                             <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                         </a>
                     </div>
+                    <div class="mt-2 text-center"><small class="text-muted">ERP Dashboard (Laravel)</small></div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative overflow-hidden mb-2">
-                    <img class="img-fluid rounded w-100" src="img/portfolio-2.jpg" alt="">
+                    <img class="img-fluid rounded w-100" src="img/portfolio-2.jpg" alt="Mobile app Flutter">
                     <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                         <a href="img/portfolio-2.jpg" data-lightbox="portfolio">
                             <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                         </a>
                     </div>
+                    <div class="mt-2 text-center"><small class="text-muted">App Mobile (Flutter)</small></div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                 <div class="position-relative overflow-hidden mb-2">
-                    <img class="img-fluid rounded w-100" src="img/portfolio-3.jpg" alt="">
+                    <img class="img-fluid rounded w-100" src="img/portfolio-3.jpg" alt="Integrazione API e SQL">
                     <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                         <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
                             <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                         </a>
                     </div>
+                    <div class="mt-2 text-center"><small class="text-muted">Integrazione API & DB</small></div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
@@ -423,7 +473,7 @@
                         <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum
                             elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet
                             eirmod eos, labore diam clita</h4>
-                        <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-1.jpg"
+                        <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-1.jpg" alt="Client testimonial 1"
                              style="width: 80px; height: 80px;">
                         <h5 class="font-weight-bold m-0">Client Name</h5>
                         <span>Profession</span>
@@ -433,7 +483,7 @@
                         <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum
                             elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet
                             eirmod eos, labore diam clita</h4>
-                        <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg"
+                        <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" alt="Client testimonial 2"
                              style="width: 80px; height: 80px;">
                         <h5 class="font-weight-bold m-0">Client Name</h5>
                         <span>Profession</span>
@@ -443,7 +493,7 @@
                         <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum
                             elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet
                             eirmod eos, labore diam clita</h4>
-                        <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-3.jpg"
+                        <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-3.jpg" alt="Client testimonial 3"
                              style="width: 80px; height: 80px;">
                         <h5 class="font-weight-bold m-0">Client Name</h5>
                         <span>Profession</span>
@@ -457,7 +507,7 @@
 
 
 <!-- Contact Start -->
-<!--<div class="container-fluid py-5" id="contact">
+<div class="container-fluid py-5" id="contact">
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center">
             <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
@@ -500,7 +550,7 @@
             </div>
         </div>
     </div>
-</div>-->
+</div>
 <!-- Contact End -->
 
 
