--- a/index.html
+++ b/index.html
@@ -459,6 +459,8 @@
 
 
 <!-- Testimonial Start -->
+
+<!-- 
 <div class="container-fluid py-5" id="testimonial">
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center">
@@ -503,11 +505,12 @@
         </div>
     </div>
 </div>
+-->
 <!-- Testimonial End -->
 
 
 <!-- Contact Start -->
-<div class="container-fluid py-5" id="contact">
+<!-- <div class="container-fluid py-5" id="contact">
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center">
             <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
@@ -551,6 +554,7 @@
         </div>
     </div>
 </div>
+-->
 <!-- Contact End -->
 
 
@@ -573,7 +577,6 @@
             <a class="text-white" href="#">Help</a>
         </div>
         <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Lorenzo Cassese</a>. All Rights Reserved.
-            Designed by <a class="text-white font-weight-bold" href="#">Lorenzo Cassese</a>
         </p>
     </div>
 </div>
