--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Lorenzo Cassese - Freelancer Portfolio</title>
+    <title>Lorenzo Cassese - Sviluppatore Full Stack</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta
         content="Lorenzo Cassese, Software Developer, Full Stack, PHP, Laravel, SQL, Flutter, TypeScript, JavaScript, Web Developer, ERP Developer, Italy"
@@ -18,8 +18,16 @@
         content="Full Stack & ERP Developer. Soluzioni web/mobile con PHP/Laravel, SQL, Flutter e TypeScript.">
     <meta property="og:image" content="img/profile.png">
     <meta property="og:url" content="">
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <!-- Favicons per tutti i dispositivi e sistemi operativi -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#457efa">
+    <link rel="shortcut icon" href="img/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#457efa">
+    <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#457efa">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
